Premove toggle switch

--- a/src/client/views/components/header.ejs
+++ b/src/client/views/components/header.ejs
@@ -195,7 +195,7 @@
                         <div class="switch-lever"></div>
                     </div>
                 </label>
-                <label class="selection-option premove opacity-0_5">
+                <label class="selection-option premove">
                     <span class="text"><%=t('header.settings.selection-premove')%></span>
                     <div class="switch">
                         <input type="checkbox">
